[package]
name = "dynstack"
version = "0.3.0"
authors = ["Gui Andrade <gh@archshift.com>"]
description = "A stack for trait objects that minimizes allocations"
repository = "https://github.com/archshift/dynstack"
license = "MIT"
readme = "README.md"

[dev-dependencies]
criterion = "0.1.2"

[[bench]]
name = "comparisons"
harness = false
